--- a/templates/login.html
+++ b/templates/login.html
@@ -3,18 +3,19 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 mx-auto">
-                <br>
+            <br>
             <form method="POST" action="/login">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
+                    <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                         else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1"
+                        placeholder="Password">
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -23,6 +24,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             
+
         </div>
     </div>
 </div>
