--- a/templates/register.html
+++ b/templates/register.html
@@ -3,12 +3,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 mx-auto">
-                <br>
+            <br>
             <form method="POST" action="/register">
                 <div class="form-group">
-                    <label for="InputEmail1">Email address</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email" required>
+                    <label for="InputEmail1"> Email
+                    </label>
+                    <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" placeholder="Enter email" required>
                 </div>
                 <div class="form-group">
                     <label for="Name">Name</label>
@@ -37,7 +38,8 @@
                 </div>
                 <div class="form-group">
                     <label for="InputPassword1">Password</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" name="password" class="form-control" id="exampleInputPassword1"
+                        placeholder="Password">
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
