--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-          <a class="navbar-brand" href="#">WebSiteName</a>
+          <a class="navbar-brand" href="/">Faculty Portal</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
               aria-expanded="true">
               <span class="navbar-toggler-icon"></span>
@@ -23,12 +23,7 @@
                   <li class="nav-item active">
                       <a class="nav-link" href="/">Home</a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Page 1</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Page 2</a>
-                  </li>
+                  
               </ul>
       
               <ul class="nav navbar-nav ml-auto">
