--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login"><span class="fas fa-sign-in-alt"></span> Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin"><span class="fas fa-sign-in-alt"></span> Admin</a>
+                </li>
                 {% endif %}
             </ul>
 
