--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,20 @@
                     <input type="password" name="password" class="form-control" id="exampleInputPassword1"
                         placeholder="Password">
                 </div>
+                <br>
+                <div class="form_group">
+                    Select departement<br>
+                    <select name="departement">
+                        <option value="CSE">CSE</option>
+                        <option value="ME">ME</option>
+                        <option value="EE">EE</option>
+                        <option value="NA">NA</option>
+
+                    </select>
+                    
+                    <br><br>
+
+                </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
