submit leave application for hod and dean

--- a/templates/Fac_port.html
+++ b/templates/Fac_port.html
@@ -105,8 +105,12 @@
                 <button type="submit" class="btn btn-primary">Send Back Again</button>
             </form>
             {% endif %}
+            <form method="GET" action="/leaveRecord">
+                
+                <button type="submit" class="btn btn-primary">Leave Record</button>
+            </form>
             {% endif %}
-
+            <form me
         </div>
 
         
