--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/admin"><span class="fas fa-sign-in-alt"></span> Admin</a>
                 </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/details"><span class="fas fa-sign-in-alt"></span>details</a>
+                    </li>
                 {% endif %}
             </ul>
 
